[gd_scene load_steps=17 format=3 uid="uid://b6kaoaksnnmrh"]

[ext_resource type="Texture2D" uid="uid://deq4bwa2su2bi" path="res://assets/cutscene/background_color.png" id="1_1p4p6"]
[ext_resource type="Script" path="res://scripts/cut_scene.gd" id="1_uja3n"]
[ext_resource type="Texture2D" uid="uid://ykj2ofrpfgis" path="res://assets/cutscene/cutscene_begin.png" id="2_ji842"]
[ext_resource type="Texture2D" uid="uid://bwffjdx87dkvo" path="res://assets/cutscene/moon.png" id="3_rl4bo"]
[ext_resource type="Texture2D" uid="uid://hv4gs3n0akss" path="res://assets/cutscene/moon_aura.png" id="4_42so5"]
[ext_resource type="Texture2D" uid="uid://bs3skyt2fn78i" path="res://assets/cutscene/speechbubble.png" id="5_oybag"]
[ext_resource type="FontFile" uid="uid://bh32vrgm5n8yv" path="res://assets/Opsilon-Regular.ttf" id="6_q461j"]
[ext_resource type="Texture2D" uid="uid://dejnwdeelfp6t" path="res://assets/UI/frame_with_background.png" id="8_mccwm"]
[ext_resource type="AudioStream" uid="uid://bfoqck6vjmafo" path="res://assets/audio/owl.wav" id="10_exvax"]
[ext_resource type="Texture2D" uid="uid://4jkwrn2t1tbd" path="res://assets/transition_background.png" id="10_nyoif"]

[sub_resource type="Animation" id="Animation_af6ug"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoonLight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FinalMessage:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SceneEnd:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ClickLabel:theme_override_colors/font_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.520226, 0.475927, 0.475875, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionBackground:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_4ol64"]
resource_name = "cutscene"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoonLight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.66667, 2.46667, 3, 3.86667, 4.8, 5.7, 6.43333, 7.06667, 8, 8.73333, 9.33333, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.615686), Color(1, 1, 1, 0.85098), Color(1, 1, 1, 0.188235), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 0.85098), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_khbs3"]
resource_name = "cutscene_nolabel"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MoonLight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.66667, 2.46667, 3, 3.86667, 4.8, 5.7, 6.43333, 7.06667, 8, 8.73333, 9.33333, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0.615686), Color(1, 1, 1, 0.85098), Color(1, 1, 1, 0.188235), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647), Color(1, 1, 1, 0.85098), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClickLabel:theme_override_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.520226, 0.475927, 0.475875, 1), Color(0.521569, 0.47451, 0.47451, 0), Color(0.521569, 0.47451, 0.47451, 0)]
}

[sub_resource type="Animation" id="Animation_xmrbg"]
resource_name = "show_final_message"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinalMessage:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333, 0.766667, 0.966667, 3.23333, 3.36667, 3.46667, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.04, 0.04), Vector2(0.3, 0.3), Vector2(0.23, 0.23), Vector2(0.25, 0.25), Vector2(0.25, 0.25), Vector2(0.27, 0.27), Vector2(0.2, 0.2), Vector2(0.001, 0.001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SceneEnd:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(3.46667, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bhvu3"]
resource_name = "start_scene"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MoonLight:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.517647)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bb8i8"]
_data = {
"RESET": SubResource("Animation_af6ug"),
"cutscene": SubResource("Animation_4ol64"),
"cutscene_nolabel": SubResource("Animation_khbs3"),
"show_final_message": SubResource("Animation_xmrbg"),
"start_scene": SubResource("Animation_bhvu3")
}

[node name="CutScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uja3n")

[node name="BackgroundColor" type="Sprite2D" parent="."]
position = Vector2(577.5, 323.5)
scale = Vector2(3.0225, 3.325)
texture = ExtResource("1_1p4p6")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(566, 322)
scale = Vector2(0.401067, 0.401067)
texture = ExtResource("2_ji842")

[node name="Moon" type="Sprite2D" parent="."]
position = Vector2(311, 139)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_rl4bo")

[node name="MoonLight" type="Sprite2D" parent="."]
position = Vector2(308, 159)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_42so5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bb8i8")
}
autoplay = "start_scene"

[node name="SpeechBubbleContainer" type="Node2D" parent="."]

[node name="MonkeyBubble" type="Sprite2D" parent="SpeechBubbleContainer"]
visible = false
position = Vector2(142, 418)
scale = Vector2(0.19, 0.19)
texture = ExtResource("5_oybag")
flip_h = true

[node name="Label" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 137.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 110
text = "And here we are. The last stop on our journey..."
autowrap_mode = 2

[node name="Label2" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "I've never been here before and I have been trick or treat'ing for 8 years now."
autowrap_mode = 2

[node name="Label3" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "Well... I guess there always has to be a first time for everything"
autowrap_mode = 2

[node name="Label4" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "I didn't want to scare you two but I also heard a lot of stories..."
autowrap_mode = 2

[node name="Label5" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "Apparently, the ghosts inside like to play games..."
autowrap_mode = 2

[node name="Label6" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.0
offset_top = -212.0
offset_right = 690.0
offset_bottom = 257.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "And if you are able to defeat them they always give a HUGE reward"
autowrap_mode = 2

[node name="Label7" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "One year during halloween I saw one guy with a huge bag of candy"
autowrap_mode = 2

[node name="Label8" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "I asked 
- OH boy how many candies you got there??"
autowrap_mode = 2

[node name="Label9" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "he replied 
- 12837 and i counted 1 by 1!!"
autowrap_mode = 2

[node name="Label10" type="Label" parent="SpeechBubbleContainer/MonkeyBubble"]
visible = false
offset_left = -681.25
offset_top = -212.5
offset_right = 589.75
offset_bottom = 256.5
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 110
text = "let's go inside then. shall we?"
autowrap_mode = 2

[node name="GhostBubble" type="Sprite2D" parent="SpeechBubbleContainer"]
visible = false
position = Vector2(937, 451)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_oybag")

[node name="Label" type="Label" parent="SpeechBubbleContainer/GhostBubble"]
visible = false
offset_left = -610.0
offset_top = -215.0
offset_right = 755.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "The mansion looks scary y'all... "
autowrap_mode = 2

[node name="Label2" type="Label" parent="SpeechBubbleContainer/GhostBubble"]
visible = false
offset_left = -610.0
offset_top = -215.0
offset_right = 805.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "I don't know if you heard but people are saying there might be ghosts living there..."
autowrap_mode = 2

[node name="Label3" type="Label" parent="SpeechBubbleContainer/GhostBubble"]
visible = false
offset_left = -610.0
offset_top = -215.0
offset_right = 755.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "I don't know about you guys but I would really need this candy."
autowrap_mode = 2

[node name="Label4" type="Label" parent="SpeechBubbleContainer/GhostBubble"]
visible = false
offset_left = -610.0
offset_top = -215.0
offset_right = 810.0
offset_bottom = 372.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 100
text = "My mum told me not to come back home if I have less than 30... I only have 8 so far."
autowrap_mode = 2

[node name="DevilBubble" type="Sprite2D" parent="SpeechBubbleContainer"]
visible = false
position = Vector2(756, 455)
scale = Vector2(0.18, 0.18)
texture = ExtResource("5_oybag")

[node name="Label" type="Label" parent="SpeechBubbleContainer/DevilBubble"]
visible = false
offset_left = -594.0
offset_top = -211.0
offset_right = 706.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 110
text = "Before I left my grandma mentioned a house uphill. "
autowrap_mode = 2

[node name="Label2" type="Label" parent="SpeechBubbleContainer/DevilBubble"]
visible = false
offset_left = -611.0
offset_top = -206.0
offset_right = 695.0
offset_bottom = 178.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 110
text = "She said nobody has lived there for at least 3 decades..."
autowrap_mode = 2

[node name="Label3" type="Label" parent="SpeechBubbleContainer/DevilBubble"]
visible = false
offset_left = -600.0
offset_top = -211.0
offset_right = 700.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 110
text = "... but somehow the lights are always on at night..."
autowrap_mode = 2

[node name="FinalMessage" type="Sprite2D" parent="."]
position = Vector2(547, 330)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_mccwm")

[node name="Label" type="Label" parent="FinalMessage"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1343.5
offset_top = -1495.0
offset_right = -329.5
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.270507, 0.207229, 0.124169, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 125
text = "Complete 3 levels
=
win a lot of candy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SceneEnd" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(577, 320)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_nyoif")

[node name="ClickLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 764.0
offset_top = 22.0
offset_right = 1112.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0.520226, 0.475927, 0.475875, 1)
theme_override_fonts/font = ExtResource("6_q461j")
theme_override_font_sizes/font_size = 24
text = "press ENTER/SPACE/LEFT CLICK to skip through dialogue"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 2

[node name="TransitionBackground" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(583, 323)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_nyoif")

[node name="OwlSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_exvax")
autoplay = true
